--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<h1>Mon titre 1</h1>
 <h2>Mon super site</h2>
 <h3>titre</h3>
 <span>sa race</span>
 <strong>Jibé</strong>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus vero, similique itaque facilis doloribus cupiditate exercitationem accusamus animi ut, fuga dolorum? Nulla, soluta saepe? Doloremque, amet! Incidunt nostrum sit quidem!</p>
+
